crates/aiken/src/cmd/snapshots/aiken__cmd__verify__tests__verify_cli_error_json_contract.snap
---
source: crates/aiken/src/cmd/verify.rs
expression: "&payload"
---
{
  "version": "1",
  "kind": "verify-cli-error",
  "message": "project load failed"
}
