crates/aiken/src/cmd/snapshots/aiken__cmd__verify__tests__verify_summary_json_contract.snap
---
source: crates/aiken/src/cmd/verify.rs
expression: "&summary"
---
{
  "total": 6,
  "proved": 1,
  "partial": 1,
  "witness": 1,
  "failed": 1,
  "timed_out": 1,
  "unknown": 1,
  "skipped": [
    {
      "name": "example.test_skip",
      "module": "example",
      "reason": "unsupported shape",
      "status": "Unsupported",
      "certification": "unsupported"
    }
  ],
  "theorems": [
    {
      "test_name": "example.test_proved",
      "theorem_name": "Example.test_proved",
      "status": "SolverValidated",
      "certification": "smt_valid_no_proof_reconstruction",
      "proof_status": {
        "kind": "proved"
      }
    },
    {
      "test_name": "example.test_witness",
      "theorem_name": "Example.test_witness",
      "status": "WitnessValidated",
      "certification": "witness_replay",
      "proof_status": {
        "kind": "witness_proved",
        "instances": 2,
        "witnesses": [
          "00",
          "01"
        ],
        "note": "witness-only proof"
      }
    },
    {
      "test_name": "example.test_partial",
      "theorem_name": "Example.test_partial",
      "status": "Partial",
      "certification": "open_obligations",
      "proof_status": {
        "kind": "partial",
        "note": "partial proof"
      },
      "explanation": "partial proof",
      "over_approximations": 2
    },
    {
      "test_name": "example.test_failed",
      "theorem_name": "Example.test_failed",
      "status": "Unknown",
      "certification": "unknown",
      "proof_status": {
        "kind": "failed",
        "category": {
          "kind": "build_error"
        },
        "reason": "build failed"
      },
      "explanation": "build failed"
    },
    {
      "test_name": "example.test_timed_out",
      "theorem_name": "Example.test_timed_out",
      "status": "TimedOut",
      "certification": "timeout",
      "proof_status": {
        "kind": "timed_out",
        "reason": "timed out"
      },
      "explanation": "timed out"
    },
    {
      "test_name": "example.test_unknown",
      "theorem_name": "Example.test_unknown",
      "status": "Unknown",
      "certification": "unknown",
      "proof_status": {
        "kind": "unknown"
      },
      "explanation": "Lean/Blaster completed without a trustworthy proof classification for this theorem."
    }
  ],
  "raw_output": {
    "success": false,
    "stdout": {
      "tail": "stdout tail",
      "total_bytes": 2048,
      "truncated": true,
      "log_path": "build/verify/logs/lake_build.stdout.log"
    },
    "stderr": {
      "tail": "stderr tail",
      "total_bytes": 1024,
      "truncated": true,
      "log_path": "build/verify/logs/lake_build.stderr.log"
    },
    "exit_code": 1,
    "theorem_results": [
      {
        "test_name": "example.test_proved",
        "theorem_name": "Example.test_proved",
        "status": "SolverValidated",
        "certification": "smt_valid_no_proof_reconstruction",
        "proof_status": {
          "kind": "proved"
        }
      },
      {
        "test_name": "example.test_witness",
        "theorem_name": "Example.test_witness",
        "status": "WitnessValidated",
        "certification": "witness_replay",
        "proof_status": {
          "kind": "witness_proved",
          "instances": 2,
          "witnesses": [
            "00",
            "01"
          ],
          "note": "witness-only proof"
        }
      },
      {
        "test_name": "example.test_partial",
        "theorem_name": "Example.test_partial",
        "status": "Partial",
        "certification": "open_obligations",
        "proof_status": {
          "kind": "partial",
          "note": "partial proof"
        },
        "explanation": "partial proof",
        "over_approximations": 2
      },
      {
        "test_name": "example.test_failed",
        "theorem_name": "Example.test_failed",
        "status": "Unknown",
        "certification": "unknown",
        "proof_status": {
          "kind": "failed",
          "category": {
            "kind": "build_error"
          },
          "reason": "build failed"
        },
        "explanation": "build failed"
      },
      {
        "test_name": "example.test_timed_out",
        "theorem_name": "Example.test_timed_out",
        "status": "TimedOut",
        "certification": "timeout",
        "proof_status": {
          "kind": "timed_out",
          "reason": "timed out"
        },
        "explanation": "timed out"
      },
      {
        "test_name": "example.test_unknown",
        "theorem_name": "Example.test_unknown",
        "status": "Unknown",
        "certification": "unknown",
        "proof_status": {
          "kind": "unknown"
        },
        "explanation": "Lean/Blaster completed without a trustworthy proof classification for this theorem."
      }
    ]
  },
  "artifacts": {
    "manifest": "build/verify/manifest.json",
    "lean_root": "build/verify/AikenVerify",
    "logs": "build/verify/logs",
    "smt2": [
      "build/verify/Artifacts/query.smt2"
    ]
  },
  "elapsed_ms": 3210,
  "command_success": false,
  "blaster_rev": "abc123",
  "plutus_core_rev": "pc456",
  "allow_vacuous_subgenerators": true,
  "two_phase_disabled": true,
  "verify_summary_version": "3"
}
